[APPDEV-3804] updated formatting reqs   fix for popout full-width with no image missing left border   change for column headers vertical alignment
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@28211 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/gnavcustom.css
+++ b/projects/Media/docroot/assets/css/common/gnavcustom.css
@@ -83,9 +83,8 @@ GLOBAL NAV DROPDOWNS
 .column-heading  {
 	font-size: 14px;
 	font-weight: bold;
-	padding: 28px 42px 0 25px;
+	padding: 23px 42px 10px 25px;
 	display: block;
-	min-height: 33px;
 	text-indent: -10px;
 	margin-left: 10px;
 }
